# sample-code-for-evaluating-amazon-q-business-applications-using-ragas

./: README.md  requirements.txt  samconfig.toml  setup.cfg  template.yml
AmazonQEvaluationLambda/: Dockerfile  README.md  authentication_infra_template.yml  pyproject.toml  setup.py
AmazonQEvaluationLambda/src/amazonq_evaluation_lambda/adapters/: qbusiness_adapter.py  ssooidc_adapter.py  sts_adapter.py
AmazonQEvaluationLambda/src/amazonq_evaluation_lambda/utils/: authentication_utils.py  logging_utils.py  ragas_utils.py
AmazonQEvaluationLambda/test/: __init__.py  constants.py  test_authentication_utils.py  test_secret_manager_adapter.py
end-to-end-solution/: README.md  delete.sh  deploy.sh  packaged-template.yaml  prompt.csv  template.yaml
end-to-end-solution/nested-stacks/: appconfig-update.yaml  exec-prompts.yaml  infra.yaml  integration-stack.yaml  streamlit-stack.yaml
end-to-end-solution/ragas/: Dockerfile  index.py  requirements.txt
src/amazonq_evaluation_lambda/adapters/: secret_manager_adapter.py
src/amazonq_evaluation_lambda/handlers/: q_evaluation_lambda_handler.py
src/amazonq_evaluation_lambda/utils/: dataset_utils.py
test/: test_dataset_utils.py  test_evaluation_lambda_handler.py  test_qbusiness_adapter.py  test_ragas_utils.py  test_sts_adapter.py
