[metadata]
name = amazonqevaluationlambda
version = 1.0
description = AmazonQEvaluationLambda
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src/amazonq_evaluation_lambda
packages = find:

root_script_source_version = default-only

test_command = pytest

# Enable build-time format checking on the developer desktop. Set this to
# "strict" (no quotes) to enforce it on the build fleet (note that this carries risks,
# because formatter updates might cause your package to break. We recommend
# True for any code that's shared. Your own application code can be "strict" (no quotes)
check_format = True

# Enable type checking
test_mypy = True

# Enable linting at build time
test_flake8 = True

[options.packages.find]
where = src.amazonq_evaluation_lambda
exclude =
    test

[options.package_data]
amazonq_evaluation_lambda =
    py.typed

[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --ignore=build/private
    --cov amazonq_evaluation_lambda
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report html:build/coverage
    --cov-report xml:build/coverage/coverage.xml
    # show the slowest 5 tests at the end
    --durations=5
    # Default to colorful output
    --color=yes
    # Uncomment to enforce a minimum code coverage threshold.
    # --cov-fail-under 50
testpaths = test


[coverage:run]
branch = true
parallel = true

[coverage:paths]
source =
    src/amazonq_evaluation_lambda/*
    build/lib/*/site-packages/

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage/coverage.xml

[flake8]
ignore =
    # Not pep8, black adds whitespace before ':'
    E203,
    # Not pep8, black adds line break before binary operator
    W503,
    # Once `bb format` is done with things, the only remaining long lines do not
    # matter; we can ignore them.
    E501,
max_line_length = 100
# Uncomment to enforce a maximum cyclomatic complexity - more info https://en.wikipedia.org/wiki/Cyclomatic_complexity
# max_complexity=10

[build_sphinx]
warning-is-error = 1
